--- a/index.html
+++ b/index.html
@@ -6,14 +6,7 @@
         <h1>Good morning!</h1>
         <p>Dikshya</p>
         <p>Shrestha</p>
-        <button onsubmit="changecolor()"> Submit</button>
-        <!-- <script>
-            function changecolor(){
-                 let a=document.getElementsByTagName("h1");
-                console.log(a)
-            }
-
-    
-        </script> -->
+        <p>second try</p>
+       
     </body>
 </html>
