--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <p>third try</p>
         <p>I am beginner</p>
         <P>Learn More always</P>
+        <P>stay positive</P>
        
     </body>
 </html>
